--- a/frontend/bookstore/src/app/app.component.html
+++ b/frontend/bookstore/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<app-right-size-bar></app-right-size-bar>
+<div class="book-backgroud">
+    <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
