--- a/frontend/bookstore/src/app/components/header/header.component.html
+++ b/frontend/bookstore/src/app/components/header/header.component.html
@@ -1,5 +1,13 @@
 <header>
-    <nav></nav>
-    <input type="text" name="search" >
-    <button>Search</button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <div class="md-2">
+            <input type="text">
+            <button class="btn btn-primary">Search</button>
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <app-basket></app-basket>
+    </nav>
 </header>
