--- a/frontend/bookstore/src/app/components/right-size-bar/right-size-bar.component.html
+++ b/frontend/bookstore/src/app/components/right-size-bar/right-size-bar.component.html
@@ -1,1 +1,9 @@
-<p>right-size-bar works!</p>
+<aside class="w-20">
+<!-- Sidebar -->
+    <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:25%">
+        <h3 class="w3-bar-item">Menu</h3>
+        <a href="#" class="w3-bar-item w3-button">Link 1</a>
+        <a href="#" class="w3-bar-item w3-button">Link 2</a>
+        <a href="#" class="w3-bar-item w3-button">Link 3</a>
+    </div>
+</aside>
